src/styles/navmenu.css
.nav-logo{
  display: inline-block;
  margin-bottom: 25px;
}
.open-nav .mobile-toggle {
  transform: rotate(-90deg);
  -webkit-transform: rotate(-90deg);
  -webkit-transition: all .4s ease-in-out;
     -moz-transition: all .4s ease-in-out;
    -ms-transition: all .4s ease-in-out;
     -o-transition: all .4s ease-in-out;
      transition: all .4s ease-in-out;
}



.mobile-toggle {
  cursor: pointer;
  font-size: 20px;
  position: fixed;
  left: 40px;
  top:40px;
  width: 30px;
  z-index: 1000;
  -webkit-transition: all .4s ease-in-out;
     -moz-transition: all .4s ease-in-out;
    -ms-transition: all .4s ease-in-out;
     -o-transition: all .4s ease-in-out;
      transition: all .4s ease-in-out;
}
.mobile-toggle span {
  width: 30px;
  height: 3px;
  margin-bottom: 6px;
  background: #000;
  display: block;
  -webkit-transition: all .8s ease-in-out;
     -moz-transition: all .8s ease-in-out;
    -ms-transition: all .8s ease-in-out;
     -o-transition: all .8s ease-in-out;
      transition: all .8s ease-in-out;
}
.black-color{
  background: #000 !important;
  -webkit-transition: all .8s ease-in-out;
     -moz-transition: all .8s ease-in-out;
    -ms-transition: all .8s ease-in-out;
     -o-transition: all .8s ease-in-out;
      transition: all .8s ease-in-out;
}
.white-color{
  background: #fff !important;
  -webkit-transition: all .8s ease-in-out;
     -moz-transition: all .8s ease-in-out;
    -ms-transition: all .8s ease-in-out;
     -o-transition: all .8s ease-in-out;
      transition: all .8s ease-in-out;
}


.menu-panel{
  width: 500px;
  position: fixed;
  top: 0;
  left: -500px;
  z-index: 999;
  background-size: cover !important;
  background-position: center center !important;
  background-repeat: no-repeat !important;
}
.menu-bg{
  background-size: cover !important;
  background-position: center center !important;
  background-repeat: no-repeat !important;
}
.menu-panel-inner{
}
.menu-block{
  border:solid 3px;
  padding: 20px 10px;
  margin: 12px;
  -webkit-transition: all 1s ease-in-out;
     -moz-transition: all 1s ease-in-out;
    -ms-transition: all 1s ease-in-out;
     -o-transition: all 1s ease-in-out;
      transition: all 1s ease-in-out;
}
.menu-block:hover{
  -webkit-transition: all 1s ease-in-out;
     -moz-transition: all 1s ease-in-out;
    -ms-transition: all 1s ease-in-out;
     -o-transition: all 1s ease-in-out;
      transition: all 1s ease-in-out;
}
.menu-block a{
  display: block;
  font-size: 18px;
  line-height: 25px;
  font-weight: 200;
}

/*NAV MENU LIST*/
.nav-list-holder{
  padding: 30px;
}
.slogan-holder{
  display: none;
}

.nav-item-wrap{
  text-align: center;
}
.main-nav-menu{
    list-style: none;
    padding: 0;
    text-align: center;
    margin-left: auto;
    margin-right: auto;
}
.main-nav-menu li{
     padding: 0;
     margin-bottom: 25px;
}
.main-nav-menu li a.main-nav-link{
     font-weight: 200;
     font-size: 16px;
     line-height: 23px;
     text-transform: uppercase;
     letter-spacing: 4px;
     text-decoration: none;
    -webkit-transition: all .8s linear;
       -moz-transition: all .8s linear;
        -ms-transition: all .8s linear;
         -o-transition: all .8s linear;
            transition: all .8s linear;
}
.main-nav-menu li a.main-nav-link:hover{
    -webkit-transition: all .8s linear;
       -moz-transition: all .8s linear;
        -ms-transition: all .8s linear;
         -o-transition: all .8s linear;
            transition: all .8s linear;
}
.main-nav-menu li a.main-nav-link:focus{
  font-weight: 200;
  border-bottom: solid 4px;
    -webkit-transition: all .8s linear;
       -moz-transition: all .8s linear;
        -ms-transition: all .8s linear;
         -o-transition: all .8s linear;
            transition: all .8s linear;
}
.sub-nav{
    display: none;
    padding: 0px;
    margin-top: 5px;
     margin-bottom: 15px;
}
.sub-nav a{
  display: block;
     font-weight: 200;
     font-size: 14px;
     line-height: 21px;
     text-decoration: none;
  -webkit-transition: all 0.5s ease-in-out;
     -moz-transition: all 0.5s ease-in-out;
    -ms-transition: all 0.5s ease-in-out;
     -o-transition: all 0.5s ease-in-out;
      transition: all 0.5s ease-in-out;
}
.sub-nav a:hover{
  -webkit-transition: all 0.5s ease-in-out;
     -moz-transition: all 0.5s ease-in-out;
    -ms-transition: all 0.5s ease-in-out;
     -o-transition: all 0.5s ease-in-out;
      transition: all 0.5s ease-in-out;
}
.sub-nav a:focus{
  font-weight: 200;
}

